# datalogic_ros2

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: param.yaml
include/: msgs_defs.h  sentinel_aux.h  sentinel_driver.h
launch/: sentinel.launch.py
src/: sentinel_driver.cpp  sentinel_node.cpp
